[package]
name = "jaso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
walkdir = "2"
unicode-normalization = "0.1.22"

[profile.release]
panic = "abort"
