[package]
name = "jaso"
version = "0.2.0"
edition = "2021"
description = "Normalizes filenames into Unicode NFC form."
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
rlimit = "0.9.1"
tokio = { version = "1.23.0", features = ["sync", "rt", "rt-multi-thread", "parking_lot", "macros", "time", "fs"] }
unicode-normalization = "0.1.22"

[profile.release]
panic = "abort"
