[package]
name = "jaso"
version = "1.0.0"
authors = ["Junghyun Nam <hyun@cro.sh>", "Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2021"
description = """
jaso normalizes filenames to their Unicode NFC format in parallel, and is much
faster than convmv(1).
"""
repository = "https://github.com/cr0sh/jaso"
homepage = "https://github.com/cr0sh/jaso"
license = "Apache-2.0 OR MIT"
keywords = ["cli", "convmv", "unicode", "nfc", "nfd"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
rlimit = "0.9.1"
tokio = { version = "1.23.0", features = ["sync", "rt", "rt-multi-thread", "parking_lot", "macros", "time", "fs"] }
unicode-normalization = "0.1.22"

[profile.release]
panic = "abort"
